# opencv-streaming

./: README.md  app.py  pyproject.toml  singleton.py  video_processor.py
